fixed logo and header alignments and paddings

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,16 +44,16 @@ ul.nav-options li a {
     background-image: url(../images/coal-harbour.png);
     min-height: 100vh;
     min-width: auto;
-    padding: 0rem 10rem 0rem;
+    padding: 8rem 10rem 8rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
 .home-logo {
-    min-width: 10rem;
-    min-height: 10rem;
-    margin: 0rem 5rem 0rem 0rem;
+    width: 10rem;
+    height: 10rem;
+    padding: 5rem 5rem 3rem;
 }
 
 .home-logo img {
@@ -64,7 +64,7 @@ ul.nav-options li a {
 .about {
     min-width: 60rem;
     max-height: 10rem;
-    margin: 0rem 0rem 0rem 5rem;
+    padding: 0rem 5rem 0rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,10 +78,10 @@ ul.nav-options li a {
 
 .home-subheader {
     text-transform: uppercase;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
     letter-spacing: 0.45rem;
     color: #e7e7e7;
-    padding: 0rem 0rem 3rem 0rem;
+    padding: 0rem 0rem 3rem;
 }
 
 .home-paragraph {
